--- a/src/css/default.css
+++ b/src/css/default.css
@@ -68,6 +68,7 @@ h1 {
     color: #fff;
     border: rgb(255, 255, 255) solid 1px;
     margin-bottom: 7px;
+    margin-top: 25px;
     cursor: pointer;
     &:hover {
         background-color: #fff;
